Update portfolio with real information and fix links

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Professional Portfolio - Showcasing innovative projects and technical expertise">
   <meta name="keywords" content="portfolio, developer, software engineer, web development, projects">
-  <title>Your Name - Portfolio</title>
+  <title>Karan Ray - Portfolio</title>
 
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -25,7 +25,7 @@
   <!-- Navigation -->
   <nav class="nav" id="navbar">
     <div class="container nav-container">
-      <a href="#home" class="nav-logo">Your Name</a>
+      <a href="#home" class="nav-logo">Karan Ray</a>
       <ul class="nav-links">
         <li><a href="#about" class="nav-link">About</a></li>
         <li><a href="#projects" class="nav-link">Projects</a></li>
@@ -40,12 +40,12 @@
       <div class="hero-content">
         <p class="hero-greeting">Hello, I'm</p>
         <h1 class="hero-title">
-          <span class="hero-name">Your Name</span>
-          <span class="hero-role">Software Developer</span>
+          <span class="hero-name">Karan Ray</span>
+          <span class="hero-role">B.Tech CSE Student</span>
         </h1>
         <p class="hero-description">
-          I build elegant, user-focused digital experiences. Specializing in modern web technologies
-          and creating solutions that make a meaningful impact.
+          Turning curiosity into code | Exploring ideas that will shape tomorrow | Passionate about connecting people &
+          technology | B.Tech CSE @ JIS University
         </p>
         <div class="hero-cta">
           <a href="#projects" class="btn btn-primary">
@@ -66,16 +66,16 @@
       <div class="about-content">
         <div class="about-text">
           <div class="section-label">About Me</div>
-          <h2>Building digital products with precision and care</h2>
+          <h2>Aspiring AI/ML Engineer | Passionate about Coding and Tech</h2>
           <p>
-            I'm a passionate developer focused on creating clean, efficient, and user-centered applications.
-            With a strong foundation in modern web technologies, I bring ideas to life through thoughtful
-            design and robust code.
+            I'm a B.Tech Computer Science student at JIS University with a passion for exploring the intersection
+            of technology and innovation. My journey in programming started with C and has evolved into building
+            full-stack applications and exploring AI/ML technologies.
           </p>
           <p>
-            My approach combines technical expertise with creative problem-solving, ensuring every project
-            not only meets requirements but exceeds expectations. I believe in continuous learning and
-            staying current with industry best practices.
+            I believe in learning by doing and constantly pushing the boundaries of what's possible with code.
+            From building resume builders to developing community platforms, I'm always excited to work on
+            projects that connect people and solve real-world problems.
           </p>
 
           <div class="about-stats">
@@ -136,7 +136,7 @@
       </div>
 
       <div class="social-grid">
-        <a href="https://github.com/yourusername" target="_blank" rel="noopener noreferrer" class="social-card">
+        <a href="https://github.com/Karanray06" target="_blank" rel="noopener noreferrer" class="social-card">
           <div class="social-icon">
             <i class="fab fa-github"></i>
           </div>
@@ -146,7 +146,8 @@
           </div>
         </a>
 
-        <a href="https://linkedin.com/in/yourusername" target="_blank" rel="noopener noreferrer" class="social-card">
+        <a href="https://www.linkedin.com/in/karan-ray-370150351/" target="_blank" rel="noopener noreferrer"
+          class="social-card">
           <div class="social-icon">
             <i class="fab fa-linkedin"></i>
           </div>
@@ -156,22 +157,22 @@
           </div>
         </a>
 
-        <a href="mailto:your.email@example.com" class="social-card">
+        <a href="https://www.instagram.com/karanray06/" target="_blank" rel="noopener noreferrer" class="social-card">
           <div class="social-icon">
-            <i class="fas fa-envelope"></i>
+            <i class="fab fa-instagram"></i>
           </div>
           <div class="social-info">
-            <h3>Email</h3>
-            <p>Send me a message</p>
+            <h3>Instagram</h3>
+            <p>Follow my journey</p>
           </div>
         </a>
 
-        <a href="https://twitter.com/yourusername" target="_blank" rel="noopener noreferrer" class="social-card">
+        <a href="https://x.com/karanray06" target="_blank" rel="noopener noreferrer" class="social-card">
           <div class="social-icon">
-            <i class="fab fa-twitter"></i>
+            <i class="fab fa-x-twitter"></i>
           </div>
           <div class="social-info">
-            <h3>Twitter</h3>
+            <h3>X (Twitter)</h3>
             <p>Follow my updates</p>
           </div>
         </a>
@@ -183,32 +184,33 @@
   <footer class="footer">
     <div class="container">
       <div class="footer-content">
-        <div class="footer-logo">Your Name</div>
+        <div class="footer-logo">Karan Ray</div>
         <p class="footer-description">
           Crafting digital experiences with passion and precision.
         </p>
 
         <div class="footer-social">
-          <a href="https://github.com/yourusername" target="_blank" rel="noopener noreferrer" class="footer-social-link"
+          <a href="https://github.com/Karanray06" target="_blank" rel="noopener noreferrer" class="footer-social-link"
             aria-label="GitHub">
             <i class="fab fa-github"></i>
           </a>
-          <a href="https://linkedin.com/in/yourusername" target="_blank" rel="noopener noreferrer"
+          <a href="https://www.linkedin.com/in/karan-ray-370150351/" target="_blank" rel="noopener noreferrer"
             class="footer-social-link" aria-label="LinkedIn">
             <i class="fab fa-linkedin"></i>
           </a>
-          <a href="https://twitter.com/yourusername" target="_blank" rel="noopener noreferrer"
-            class="footer-social-link" aria-label="Twitter">
-            <i class="fab fa-twitter"></i>
+          <a href="https://x.com/karanray06" target="_blank" rel="noopener noreferrer" class="footer-social-link"
+            aria-label="X (Twitter)">
+            <i class="fab fa-x-twitter"></i>
           </a>
-          <a href="mailto:your.email@example.com" class="footer-social-link" aria-label="Email">
-            <i class="fas fa-envelope"></i>
+          <a href="https://www.instagram.com/karanray06/" target="_blank" rel="noopener noreferrer"
+            class="footer-social-link" aria-label="Instagram">
+            <i class="fab fa-instagram"></i>
           </a>
         </div>
       </div>
 
       <div class="footer-bottom">
-        <p>&copy; 2024 Your Name. All rights reserved.</p>
+        <p>&copy; 2024 Karan Ray. All rights reserved.</p>
       </div>
     </div>
   </footer>
