--- a/index.html
+++ b/index.html
@@ -57,6 +57,10 @@
             <span>Get in Touch</span>
           </a>
         </div>
+        <div class="hero-contact-info" style="margin-top: 1.5rem; font-size: 0.9rem; color: var(--text-secondary);">
+          <p><i class="fas fa-envelope"></i> 2006karanray@gmail.com &nbsp;|&nbsp; <i class="fab fa-whatsapp"></i> +91
+            7980398203</p>
+        </div>
       </div>
     </div>
   </section>
@@ -96,6 +100,25 @@
       </div>
 
       <div class="social-grid">
+        <a href="mailto:2006karanray@gmail.com" class="social-card">
+          <div class="social-icon">
+            <i class="fas fa-envelope"></i>
+          </div>
+          <div class="social-info">
+            <h3>Email</h3>
+            <p>2006karanray@gmail.com</p>
+          </div>
+        </a>
+
+        <a href="https://wa.me/917980398203" target="_blank" rel="noopener noreferrer" class="social-card">
+          <div class="social-icon">
+            <i class="fab fa-whatsapp"></i>
+          </div>
+          <div class="social-info">
+            <h3>WhatsApp</h3>
+            <p>+91 7980398203</p>
+          </div>
+        </a>
         <a href="https://github.com/Karanray06" target="_blank" rel="noopener noreferrer" class="social-card">
           <div class="social-icon">
             <i class="fab fa-github"></i>
